--- a/md_documentation__installation__guide.html
+++ b/md_documentation__installation__guide.html
@@ -110,12 +110,11 @@ $(document).ready(function(){initNavTree('md_documentation__installation__guide.
 <li>Go to mainwindow.ui</li>
 <li>Add a new QGraphicsView or QLabel in Creator.</li>
 <li>Right click the widget and choose “promote to…”</li>
-<li>Add the promote widget by entering the name of the class in the line edit at the button.</li>
-</ol>
+<li><p class="startli">Add the promote widget by entering the name of the class in the line edit at the button.</p>
 <div class="image">
-<img src="images/promoteTo.png?raw=true"  alt="Promote to..." title="Promote to..."/>
+<img src="http://i.imgur.com/FwM78HA.png"  alt="PromoteTo"/>
 </div>
-<ol type="1">
+</li>
 <li>Click “Add”</li>
 <li>Click the added class then press promote.</li>
 <li>Open main.cpp</li>
