--- a/md_documentation__usage.html
+++ b/md_documentation__usage.html
@@ -113,15 +113,19 @@ $(document).ready(function(){initNavTree('md_documentation__usage.html','');});
 <div class="image">
 <img src="http://i.imgur.com/ABc5Bmb.png"  alt="Imgur"/>
 </div>
-<p>The menu bar can be hidden by pressing the key 'H' on your keyboard, or right click on the view to hide it.</p>
+<p>The menu bar can be hidden by pressing the key 'H' on your keyboard,</p>
+<div class="image">
+<img src="http://i.imgur.com/J4AIhX9.png"  alt="Imgur"/>
+</div>
+<p>or right click on the view to hide it.</p>
 <div class="image">
 <img src="http://i.imgur.com/s3W3fYn.png"  alt="Imgur"/>
 </div>
-<p> <a href="http://i.imgur.com/J4AIhX9.png">Imgur</a></p>
-<p>In region selection mode, you have to press Ctrl to drag the image around. Feel free to select any region then right click and press "Copy Selected Region" to get the sub-image.</p>
+<p>In region selection mode, you have to press Ctrl to drag the image around. Feel free to select any region then right click</p>
 <div class="image">
 <img src="http://i.imgur.com/lZyqfbi.png"  alt="Imgur"/>
 </div>
+<p>and press "Copy Selected Region" to get the sub-image.</p>
 <div class="image">
 <img src="http://i.imgur.com/DyDLhkf.png"  alt="Imgur"/>
 </div>
