--- a/md_documentation__installation__guide.html
+++ b/md_documentation__installation__guide.html
@@ -112,7 +112,7 @@ $(document).ready(function(){initNavTree('md_documentation__installation__guide.
 <li>Right click the widget and choose “promote to…”</li>
 <li><p class="startli">Add the promote widget by entering the name of the class in the line edit at the button.</p>
 <div class="image">
-<img src="http://i.imgur.com/FwM78HA.png"  alt="PromoteTo"/>
+<img src="http://i.imgur.com/6mFC18x.png"  alt="PromoteTo"/>
 </div>
 </li>
 <li>Click “Add”</li>
